--- a/public/index.html
+++ b/public/index.html
@@ -69,15 +69,19 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <!-- Start of ChatBot (www.chatbot.com) code -->
-  <script type="text/javascript">
-    window.__be = window.__be || {};
-    window.__be.id = "60a3674cab885e0007cc7bf7";
-    (function () {
+  <!-- Start of ChatBot (www.chatbot.com) code -->
+<!-- Start of ChatBot (www.chatbot.com) code -->
+<script type="text/javascript">
+  window.__be = window.__be || {};
+  window.__be.id = "60b61ce69598310007ce89dc";
+  (function() {
       var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
       be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
-    })();
-  </script>
+  })();
+</script>
+<!-- End of ChatBot code -->
+<!-- End of ChatBot code -->
   <!-- End of ChatBot code -->
 </body>
 
